# learn-fastmcp

./: Dockerfile  pyproject.toml
1_quickstart/: my_server.py
2_servers/overview/: my_server.py
3_client/overview/: my_client.py
fastmcp-client/server/: math_server.py
langchain-mcp-client/: client.py
langchain-multi-client/: client.py
langchain-multi-client/server/: weather_server.py
pokemonresources/: server.py
quickstart/: my_client.py
shellserver/: mcpreadme.md  readme.md  server.py
shellserver/.cursor/rules/: python.mdc
