[project]
name = "terminal-tool"
version = "0.1.0"
description = "Terminal Tool MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp[cli]>=2.14.3",
    "httpx>=0.28.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "python-dotenv>=1.2.1",
]
